k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: go-app-ns
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8080
